--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists users that have contributed content to this repo
 
 Bezaleel Olakunori <bezaleeloci@gmail.com>
+Celestine Akpanoko <celestineakpanoko@gmail.com>
